--- a/frontend/assets/styles/CUBE/block.scss
+++ b/frontend/assets/styles/CUBE/block.scss
@@ -1,11 +1,26 @@
-.accordion-head {
+.accordion {
+    
+    .accordion-head {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        
+        border-radius: .25rem;
+        padding: .25rem;
+        
+        border: solid 1px gray;
+        background-color: hsl(40, 100%, 65%);
+        
+        user-select: none;
+        cursor: pointer;
+    }
+}
+
+
+.movie-item {
     display: flex;
     align-items: center;
-    justify-content: space-between;
-
-    border-radius: .25rem;
-    padding: .25rem;
     
-    border: solid 1px gray;
-    background-color: hsl(40, 100%, 65%);
+    gap: 1rem;
+    padding: .25rem 0;
 }
